src/test/ui/pattern/pat-tuple-bad-type.stderr
error[E0282]: type annotations needed
  --> $DIR/pat-tuple-bad-type.rs:5:9
   |
LL |     let x;
   |         - consider giving `x` a type
...
LL |         (..) => {}
   |         ^^^^ cannot infer type
   |
   = note: type must be known at this point

error[E0308]: mismatched types
  --> $DIR/pat-tuple-bad-type.rs:10:9
   |
LL |     match 0u8 {
   |           --- this expression has type `u8`
LL |         (..) => {}
   |         ^^^^ expected `u8`, found `()`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0282, E0308.
For more information about an error, try `rustc --explain E0282`.
